--- a/index.html
+++ b/index.html
@@ -11,27 +11,20 @@
 		<div class="panel panel1">
 			rotateX( 45deg
 		</div>
-		<div class="panel panel2 ">
+		<div id="left-side" class="panel panel2 ">
 
-			<div class="up container-fluid">
-				<div class="item item1"></div>
-				<div class="item item2"></div>
-				<div class="item item3"></div>
-			</div>
-
-			<div class="bottom container-fluid">
-				<div class="item item4"></div>
-				<div class="item item5"></div>
-				<div class="item item6"></div>
-				<div class="item item7"></div>
-			</div>
-
+			
 		</div>
 	</div>
 
 </body>
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="jQuery.animateTransform.min.js"></script>
+
+<script>
+	
+	 $('#left-side').load('left-side.html');
+</script>
 <!--
 <script src="jquery.transform2d.js"></script>
 <script src="jquery.transform3d.js"></script> -->
