--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="my.css">
-
+	<link rel="stylesheet" type="text/css" href="layout.css">
 </head>
 
 <body>
