add iframe to div and add floor

--- a/left-side.html
+++ b/left-side.html
@@ -1,12 +1,26 @@
 <div class="up container-fluid">
-	<div class="item item1"></div>
-	<div class="item item2"></div>
-	<div class="item item3"></div>
+	<div class="item item1">
+    <iframe src="http://192.168.2.198:8080/group/infopowercommunity/test1111"></iframe>
+	</div>
+	<div class="item item2">
+	  <iframe src="http://192.168.2.198:8080/qcj2ee/c_10135/p_11106/area/area.jsp?"></iframe>
+	</div>
+	<div class="item item3">
+	  <iframe src="http://192.168.2.198:8080/qcj2ee/c_10135/p_11106/line/line.jsp?"></iframe>
+	</div>
 </div>
 
 <div class="bottom container-fluid">
-	<div class="item item4"></div>
-	<div class="item item5"></div>
-	<div class="item item6"></div>
-	<div class="item item7"></div>
+	<div class="item item4">
+	  <iframe src="http://192.168.2.198:8080/qcj2ee/c_10135/p_11214/piechart3D/piechart3D.jsp?"></iframe>
+	</div>
+	<div class="item item5">
+	  <iframe src="http://192.168.2.198:8080/qcj2ee/c_10135/p_11214/twline3D/twline3D.jsp?"></iframe>
+	</div>
+	<div class="item item6">
+	  <iframe src="http://192.168.2.198:8080/qcj2ee/c_10135/p_11212/twinbarline/twinbarline.jsp?"></iframe>
+	</div>
+	<div class="item item7">
+	  <iframe src="http://192.168.2.198:8080/qcj2ee/c_10135/p_11106/hbar/hbar.jsp?"></iframe>
+	</div>
 </div>
